--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alexis Ortiz</title>
+    <title>Raul Alexis Ortiz Perales</title>
     <link rel="stylesheet" href="style.css">
     <!-- Iconos de redes (Font Awesome) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -18,10 +18,7 @@
             <p>Actualmente trabajo en US Motor Works, una empresa donde he podido desarrollar mis habilidades en tecnología y soporte. A futuro, me gustaría enfocar mi carrera en el área de infraestructura de redes, ya que me apasiona el diseño, implementación y mantenimiento de sistemas que permitan una comunicación más eficiente y segura dentro de las organizaciones.</p>
             
             <div class="social-buttons">
-                <a href="https://facebook.com/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://instagram.com/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com/" target="_blank" class="github"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/Alexxiss18" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </main>
 
@@ -31,3 +28,4 @@
     </div>
 </body>
 </html>
+
