--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Actualmente trabajo en US Motor Works, una empresa donde he podido desarrollar mis habilidades en tecnología y soporte. A futuro, me gustaría enfocar mi carrera en el área de infraestructura de redes, ya que me apasiona el diseño, implementación y mantenimiento de sistemas que permitan una comunicación más eficiente y segura dentro de las organizaciones.</p>
             
             <div class="social-buttons">
-                <a href="https://github.com/Alexxiss18" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/Alexxiss18" target="_blank" class="github"><i class="fab fa-github"></i></a>
             </div>
         </main>
 
@@ -28,4 +28,5 @@
     </div>
 </body>
 </html>
+
 
